--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,11 @@
     <input type="submit" value="Send">
   </form>
 
+  <h2>Tidligere prompt</h2>
+    <p id="query" style="color: grey;"></p>
+
   <h2>Response:</h2>
+
   <pre id="responseBox"></pre>
 
   <h2 style="color: red;">Error:</h2>
