More tinkering and added git ignore

--- a/static/style.css
+++ b/static/style.css
@@ -64,8 +64,9 @@ pre {
   height: 80vh;
 }
 
-[variant="faded"] {
-  color: grey;
+textarea {
+    width: 100%;
+    padding: 8px;
 }
 
 [variant="error"] {
