--- a/templates/index.html
+++ b/templates/index.html
@@ -17,9 +17,8 @@
     <div class="prompt-window">
     <div class="prompt-container">
       <div id="errorBox" variant="error"></div>
-      <h1>Ask the Llama</h1>
       <form method="POST" id="promptForm">
-      <label for="prompt">Prompt:</label><br>
+      <label for="prompt">Ask the Llama:</label><br>
       <textarea id="prompt" name="prompt" rows="6" cols="60"></textarea><br><br>
       <input type="submit" value="Send">
       
