--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
 
         <select id="prompt-template">
           {{range .PromptMethods}}
-          <option value="{{.}}"  {{if eq . "default"}}selected{{end}}>{{.}}</option>
+          <option value="{{.}}"  {{if eq . "Default"}}selected{{end}}>{{.}}</option>
           {{end}}
         </select> 
       </span> 
