--- a/static/style.css
+++ b/static/style.css
@@ -45,6 +45,7 @@ pre {
   border-radius: 10px;
   padding: 8px;
   color: #37373d;
+      white-space: break-spaces;
 }
 
 .reply {
@@ -68,6 +69,7 @@ pre {
     display: grid;
     grid-template-columns: 1fr auto auto;
     gap: 4px;
+    align-items: center;
 }
 
 select,
@@ -77,6 +79,8 @@ textarea {
 
 textarea {
         width: 100%;
+        
+    box-sizing: border-box;
 }
 
 [variant="error"] {
