--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
         <span>
           <input type="submit" value="Send">
         </span>
-       Selected prompt template: 
+       Selected prompt template (not used atm): 
 
         <select id="prompt-template">
           {{range .PromptMethods}}
