--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,10 @@
+:root {
+  --border-color: #62626280;
+  --border: 1px solid var(--border-color);
+  --basePadding: 6px 8px;
+
+}
+
 body {
   background-color: #37373d;
   background-image: url("/static/bg2.png");
@@ -33,10 +40,14 @@ pre {
   flex-direction: column;
   width: 1024px;
   max-width: 100%;
-  margin: 12px auto 0;
+}
+
+.prompt-container {
+  margin: 4px auto 0;
 }
 
 .conversation-container {
+  margin: 12px auto 0;
   gap: 12px;
 }
 
@@ -44,7 +55,6 @@ pre {
   width: 756px;
   max-width: 90%;
   border-radius: 10px;
-  padding: 8px;
   color: #37373d;
   white-space: break-spaces;
 }
@@ -63,7 +73,8 @@ pre {
 }
 
 .spacer {
-  height: 80vh;
+  height: 100%;
+  height: -webkit-fill-available;
 }
 
 .prompt-submit-container {
@@ -73,17 +84,39 @@ pre {
     align-items: center;
 }
 
+.conversation,
+input,
 select,
 textarea {
-    padding: 8px;
+    padding: var(--basePadding);
 }
 
 textarea {
-        width: 100%;
-        
+    width: 100%;       
     box-sizing: border-box;
+    resize: vertical;
 }
 
 [variant="error"] {
   color: red;
+}
+
+.shadow {
+  opacity: 1;
+  pointer-events: none;
+  width: 100%;
+  z-index: 10;
+  height: 8px;
+}
+
+.shadow-top {
+  top: 0;
+  position: fixed;
+	background: radial-gradient(ellipse at 50% top, rgba(0, 0, 0, 0.4) 0, rgba(0, 0, 0, 0) 70%);
+}
+
+.shadow-bottom {
+  bottom: 0;
+  position: sticky;
+	background: radial-gradient(ellipse at 50% bottom, rgba(0, 0, 0, 0.2) 0, rgba(0, 0, 0, 0) 70%);
 }
