--- a/templates/index.html
+++ b/templates/index.html
@@ -9,23 +9,24 @@
 <body>
 
     
+  <div class="shadow shadow-top"></div>
   <div class="conversation-window">
-
     <div class="conversation-container"></div>
     <div class="spacer"></div>
+    <div class="shadow shadow-bottom"></div>
   </div>
     <div class="prompt-window">
-    <div class="prompt-container">
-      <div id="errorBox" variant="error"></div>
+      <div class="prompt-container">
+        <div id="errorBox" variant="error"></div>
       <form method="POST" id="promptForm">
-      <label for="prompt">Ask the Llama:</label><br>
-      <textarea id="prompt" name="prompt" rows="6" cols="60"></textarea><br><br>
-      <span class="prompt-submit-container">
-        <span>
-          <input type="submit" value="Send">
-        </span>
+        <label for="prompt">Ask the Llama:</label><br>
+        <textarea id="prompt" name="prompt" rows="6" cols="60"></textarea><br><br>
+        <span class="prompt-submit-container">
+          <span>
+            <input type="submit" value="Send">
+          </span>
        Selected prompt template (not used atm): 
-
+       
         <select id="prompt-template">
           {{range .PromptMethods}}
           <option value="{{.}}"  {{if eq . "Default"}}selected{{end}}>{{.}}</option>
